kubernetes/monitor/prometheus-grafana/grafana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: test-grafana.marslo.com
    http:
      paths:
      - path: /
        backend:
         serviceName: grafana
         servicePort: 3000
