kubernetes/monitor/prometheus-grafana/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: test-prometheus.marslo.com
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
